k8s/32-persist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persist
  namespace: go-message-app
spec:
  replicas: 1
  selector:
    matchLabels: { app: persist }
  template:
    metadata:
      labels: { app: persist }
    spec:
      containers:
        - name: persist
          image: go-message-app-persist:latest
          imagePullPolicy: Never
