k8s/25-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: go-message-app
spec:
  replicas: 1
  selector: { matchLabels: { app: kafka } }
  template:
    metadata: { labels: { app: kafka } }
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.0.0
          ports: [{ containerPort: 9092 }]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: go-message-app
spec:
  selector: { app: kafka }
  ports: [{ port: 9092, targetPort: 9092 }]
